added modified photo struct api
